fix: 틈 요청 충돌 확인 API의 자정(00:00) 처리 로직 및 쿼리 오류 수정
- JPQL 파라미터 타입 불일치로 인한 실행 에러 해결
- 종료 시간이 00:00일 경우 조회가 누락되는 로직 수정
- 응답 시 00:00을 "24:00"으로 변환하는 포맷터 적용